# Financial_Agent

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  QUICKSTART.md  README.md  SAMPLE_DATA.md  STRUCTURE.md  TESTING_GUIDE.md  TEST_REPORT.md  convert_financial_report.py  docker-compose.yaml  example.py  pyproject.toml  requirements.txt  streamlit_app.py  test_integration.py  test_system.py
app/: __init__.py  main.py
app/agents/: __init__.py  tools.py  workflow.py
app/api/: __init__.py  agent.py  financials.py
app/core/: __init__.py  config.py  data_loader.py  utils.py
app/models/: __init__.py  agent_models.py
app/services/: __init__.py  capital_allocation_service.py  earnings_quality_service.py  ews_service.py  factor_service.py  management_service.py  peer_service.py  roic_wacc_service.py  snapshot_service.py  trend_service.py
tests/: conftest.py  test_api.py  test_models.py  test_services.py
ui/: __init__.py
ui/pages/: agent.py  earnings_quality.py  ews.py  factor.py  management.py  peer.py  roic_wacc.py  snapshot.py  trend.py
